<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">C02 Vorlesungsmanager</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">Detailansicht</string>
    <string name="titel">Titel:</string>
    <string name="von">Von:</string>
    <string name="bis">Bis:</string>
    <string name="gesamtSterne">Gesamte Sterne:</string>
    <string name="anzahlVotes">Anzahl Votes:</string>
    <string name="durchschnittlichesRating">Durchschnittliches Rating:</string>
    <string name="details">Details:</string>
    <string name="notiz">Notiz</string>
    <string name="notizBearbeiten">Notiz bearbeiten</string>
    <string name="zuKalenderHinzufuegen">Zu meinem Kalender hinzufügen</string>
    <string name="button_add">Übernehmen</string>
    <string name="button_cancel">Abbrechen</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="zurueck">Zurück</string>
    <string name="notizBearbeitenMenu">Notiz bearbeiten</string>
    <string name="stringBewertung">Bewertung</string>
    <string name="about">About</string>
    <string name="aboutTitle">About</string>
    <string name="aboutMessage">&#169; 2014 by\nMichael Mauthner\nLukas Pendl\nChristopher Reinbacher</string>
    <string name="ok">OK</string>
    <string name="status">Online-Status:</string>
    <string name="status_offline">Offline</string>
    <string name="status_online">Online</string>
    <string name="offlineMessage">Es konnte keine Verbindung zum Internet hergestellt werden. Bitte stellen Sie eine Verbindung zum Internet her und laden Sie die Daten über den Menüpunkt Refresh erneut.</string>
	<string name="offlineTitle">Fehler aufgetreten!</string>
	<string name="offlineMessageFunctionNotPossible">Diese Funktion ist nicht verfügbar, da Sie keine Verbindung mit dem Internet haben. Stellen Sie eine Verbindung mit dem Internet her und versuchen Sie es erneut!</string>
    
</resources>
