<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="at.campus02.asy.DetailActivity" >

    <item
        android:id="@+id/action_calendar"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/zuKalenderHinzufuegen"/>
    <item
        android:id="@+id/notizBearbeitenMenu"
         android:orderInCategory="101"
        android:title="@string/notizBearbeitenMenu"/>
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="102"
        android:showAsAction="never"
        android:title="@string/action_refresh"/>
    <item
        android:id="@+id/zurueck"
        android:orderInCategory="103"
        android:title="@string/zurueck"/>

</menu>